--- a/gallery.html
+++ b/gallery.html
@@ -209,7 +209,7 @@ Author: Mohammed Hisam
             </div>
         </div>
         <h2 class="inner-text-title font-weight-bold mb-sm-3 mb-2 mt-5 text-center">No photos uploaded</h2>
-        <div hidden class="row support-bottom text-center ">
+        <div class="row support-bottom text-center ">
             <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
                 <img class="img-fluid" src="gallery/21.jpg" alt=" ">
                 <a href="gallery/21.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
