--- a/gallery.html
+++ b/gallery.html
@@ -241,8 +241,8 @@ Author: Mohammed Hisam
                 <hr>
             </div>
             <div class="col-lg-6 col-sm-6 support-grid mt-sm-0 mt-4">
-                <img class="img-fluid" src="gallery/1.jpg" alt=" ">
-                <a href="gallery/1.jpg" class="btn button-style button-2 mt-4" target="_blank" download>Download
+                <img class="img-fluid" src="gallery/1.png" alt=" ">
+                <a href="gallery/1.png" class="btn button-style button-2 mt-4" target="_blank" download>Download
                 </a>
                 <hr>
             </div>
