--- a/offStage.html
+++ b/offStage.html
@@ -355,6 +355,73 @@ Author: Mohammed Hisam
             </div>
         </div>
         <!-- //Desertation Malayalam -->
+        
+        <!-- kavyakeli -->
+        <div class="container" style="margin-top: 1rem;">
+            <!-- Item Title -->
+            <button class="collapsible inner-text-title font-weight-bold text-center">കാവ്യകേളി
+            </button>
+            <!-- //Item Title -->
+            <div class="row content">
+                <!-- 1st Prize -->
+                <div class="col-lg-4 col-md-6 features15-col-text">
+                    <a href="#prize" class="d-flex feature-unit align-items-center">
+                        <div class="col-4">
+                            <div class="features15-info">
+                                <img class="img-fluid" src="assets/images/first.png" alt=" ">
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="features15-para">
+                                <h6>Pheonix</h6>
+                                <h4>Anushka</h4>
+                                <p>BCA 1st Year</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- //1st Prize -->
+
+                <!-- 2nd Prize -->
+                <div class="col-lg-4 col-md-6 features15-col-text">
+                    <a href="#prize" class="d-flex feature-unit align-items-center">
+                        <div class="col-4">
+                            <div class="features15-info">
+                                <img class="img-fluid" src="assets/images/second.png" alt=" ">
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="features15-para">
+                                <h6>Titans</h6>
+                                <h4>Basima</h4>
+                                <p>Bcom CA 3rd Year</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- //2nd Prize -->
+
+                <!-- 3rd Prize -->
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
+                    <a href="#prize" class="d-flex feature-unit align-items-center">
+                        <div class="col-4">
+                            <div class="features15-info">
+                                <img class="img-fluid" src="assets/images/third.png" alt=" ">
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="features15-para">
+                                <h6>Falcons</h6>
+                                <h4>Shahana Nesrin</h4>
+                                <p>BA English 3rd Year</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- //3rd Prize -->
+            </div>
+        </div>
+        <!-- //kavyakeli -->
 
         <!-- Embroidary -->
         <div class="container" style="margin-top: 1rem;">
@@ -424,7 +491,7 @@ Author: Mohammed Hisam
         <!-- //Embroidary -->
 
         <!-- Dissertation  Writing English -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">Dissertation Writing English
             </button>
@@ -440,9 +507,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Ahla Muhammed Yoosuf</h4>
-                                <p>BA English</p>
+                                <h6>Falcons</h6>
+                                <h4>Thaiseer mohsammed althaf</h4></h4>
+                                <p>BA English 2nd year</p>
                             </div>
                         </div>
                     </a>
@@ -459,9 +526,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Muhammed Ibrahim Arshad</h4>
-                                <p>BA English</p>
+                               <h6>Falcons</h6>
+                                <h4>Ahla Muhammed Yoosuf</h4>
+                                <p>BA English 3rd year</p>
                             </div>
                         </div>
                     </a>
@@ -478,9 +545,27 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Thalseer Muhammed Althaf</h4>
-                                <p>BA English</p>
+                                <h6>Falcons</h6>
+                                <h4>Fidha fathima</h4>
+                                <p>BA English 1st year</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- //3rd Prize -->
+                 <!-- 3rd Prize -->
+                <div class="col-lg-4 col-md-6 features15-col-text">
+                    <a href="#prize" class="d-flex feature-unit align-items-center">
+                        <div class="col-4">
+                            <div class="features15-info">
+                                <img class="img-fluid" src="assets/images/third.png" alt=" ">
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="features15-para">
+                                <h6>Pheonix</h6>
+                                <h4>Fathima hanna</h4>
+                                <p>BA multimedia 1st year</p>
                             </div>
                         </div>
                     </a>
@@ -558,7 +643,7 @@ Author: Mohammed Hisam
         <!-- //Poetry Writing English -->
 
         <!-- Short Story Writing English -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">Short Story Writing English
             </button>
@@ -574,9 +659,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Safna</h4>
-                                <p>BA English</p>
+                                <h6>Falcons</h6>
+                                <h4>Shibila p</h4>
+                                <p>BA English 3rd year</p>
                             </div>
                         </div>
                     </a>
@@ -593,9 +678,27 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Ahla Muhammed Yosuf</h4>
-                                <p>BA English</p>
+                                <h6>Falcons</h6>
+                                <h4>Safna</h4>
+                                <p>BA English 3rd year</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- //2nd Prize -->
+                <!-- 2nd Prize -->
+                <div class="col-lg-4 col-md-6 features15-col-text">
+                    <a href="#prize" class="d-flex feature-unit align-items-center ">
+                        <div class="col-4">
+                            <div class="features15-info">
+                                <img class="img-fluid" src="assets/images/second.png" alt=" ">
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="features15-para">
+                                <h6>Falcons</h6>
+                                <h4>Ahla</h4>
+                                <p>BA English 3rd year</p>
                             </div>
                         </div>
                     </a>
@@ -612,9 +715,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Thalseer Muhammed Yosuf</h4>
-                                <p>BA English</p>
+                                <h6>Falcons</h6>
+                                <h4>Zinan</h4>
+                                <p>BA English 3rd year</p>
                             </div>
                         </div>
                     </a>
