--- a/onStage.html
+++ b/onStage.html
@@ -335,7 +335,7 @@ Author: Mohammed Hisam
                 <!-- //3rd Prize -->
 
                 <!-- 3rd Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center">
                         <div class="col-4">
                             <div class="features15-info">
