--- a/onStage.html
+++ b/onStage.html
@@ -963,7 +963,7 @@ Author: Mohammed Hisam
 
 
 
-        <h4 class="inner-text-title font-weight-bold mb-sm-3 mb-2 mt-5 text-center">No Updates till now</h4>
+        <h4 class="inner-text-title font-weight-bold mb-sm-3 mb-2 mt-5 text-center">DAY 1</h4>
 
         <!-- MonoAct -->
         <div hidden class="container" style="margin-top: 1rem;">
