--- a/offStage.html
+++ b/offStage.html
@@ -934,9 +934,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Prabin</h4>
-                                <p>Multimedia 3rd Year</p>
+                               <h6>Phoenix</h6>
+                                <h4>Safwana</h4>
+                                <p>Multimedia 1st Year</p>
                             </div>
                         </div>
                     </a>
@@ -954,8 +954,8 @@ Author: Mohammed Hisam
                         <div class="col-8">
                             <div class="features15-para">
                                 <h6>Phoenix</h6>
-                                <h4>Safwana</h4>
-                                <p>Multimedia 1st Year</p>
+                                <h4>Fathima Noora k</h4>
+                                <p>Multimedia 3rd Year</p>
                             </div>
                         </div>
                     </a>
