--- a/onStage.html
+++ b/onStage.html
@@ -1433,7 +1433,7 @@ Author: Mohammed Hisam
         <!-- //Semi Classical Song Girls -->
 
         <!-- Mappilapattu Individual Boys -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div  class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">മാപ്പിളപ്പാട്ട് (വ്യക്തിഗതം)(ആൺ)
             </button>
@@ -1449,9 +1449,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Shihad</h4>
-                                <p>Multimedia 2nd Year</p>
+                                <h6>Phoenix</h6>
+                                <h4>Muhammed Shihad T</h4>
+                                <p>Multimedia 3nd Year</p>
                             </div>
                         </div>
                     </a>
@@ -1468,9 +1468,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Rayees</h4>
-                                <p>BCom TT 2nd Year</p>
+                                <h6>Phoenix</h6>
+                                <h4>Muhammed Musthafa</h4>
+                                <p>BCA 2nd Year</p>
                             </div>
                         </div>
                     </a>
@@ -1587,7 +1587,7 @@ Author: Mohammed Hisam
         <!-- //Mappilapattu Individual Girls -->
 
         <!-- Classical Song Girls -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div  class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">ക്ളാസ്സിക്കൽ സംഗീതം (പെൺ)
 
@@ -1605,9 +1605,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Emerald</h6>
-                                <h4>Aswathi</h4>
-                                <p>BBA 2nd Year</p>
+                                <h6>Falcons</h6>
+                                <h4>Fidha v.v</h4>
+                                <p>BA ENG 2nd Year</p>
                             </div>
                         </div>
                     </a>
@@ -1624,9 +1624,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Nithina</h4>
-                                <p></p>
+                                <h6>Phoenix</h6>
+                                <h4>Ayisha Julna KM</h4>
+                                <p>Multimedia 2rd Year</p>
                             </div>
                         </div>
                     </a>
@@ -1643,20 +1643,34 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Mayoogha</h4>
-                                <p>Multimedia 3rd Year</p>
+                                <h6>Titans</h6>
+                                <h4>Risha</h4>
+                                <p>Bcom CA 1rd Year</p>
                             </div>
                         </div>
                     </a>
                 </div>
                 <!-- //3rd Prize -->
             </div>
+                                <a href="#prize" class="d-flex feature-unit align-items-center">
+                        <div class="col-4">
+                            <div class="features15-info">
+                                <img class="img-fluid" src="assets/images/third.png" alt=" ">
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="features15-para">
+                                <h6>Warious</h6>
+                                <h4>Muhsina mr</h4>
+                                <p>Phy 3rd Year</p>
+                            </div>
+                        </div>
+                    </a>
         </div>
         <!-- //Classical Song Girls -->
 
         <!-- Lalidha Song Girls -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div  class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">ലളിതസംഗീതം (പെൺ)
             </button>
@@ -1672,9 +1686,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Ashida</h4>
-                                <p>BA English 2nd Year</p>
+                                <h6>Phoenix</h6>
+                                <h4>Priya KT</h4>
+                                <p>Multi 2nd Year</p>
                             </div>
                         </div>
                     </a>
@@ -1682,7 +1696,7 @@ Author: Mohammed Hisam
                 <!-- //1st Prize -->
 
                 <!-- 1st Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div disable class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center">
                         <div class="col-4">
                             <div class="features15-info">
@@ -1691,8 +1705,8 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Sreeya</h4>
+                                <h6>Phoenix</h6>
+                                <h4>Sriya KT</h4>
                                 <p>Multimedia 2nd Year</p>
                             </div>
                         </div>
@@ -1710,9 +1724,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Priya</h4>
-                                <p>Multimedia</p>
+                                <h6>Phoenix</h6>
+                                <h4>Sriya KT</h4>
+                                <p>Multimedia 2nd Year</p>
                             </div>
                         </div>
                     </a>
@@ -1729,9 +1743,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Nandana PP</h4>
-                                <p>Multimedia 3rd Year</p>
+                                <h6>Falcons</h6>
+                                <h4>Ashitha</h4>
+                                <p>BA Eng 3rd Year</p>
                             </div>
                         </div>
                     </a>
