--- a/onStage.html
+++ b/onStage.html
@@ -966,7 +966,7 @@ Author: Mohammed Hisam
         <h4 class="inner-text-title font-weight-bold mb-sm-3 mb-2 mt-5 text-center">DAY 1</h4>
 
         <!-- MonoAct -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div disable class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">Monoact
             </button>
@@ -1497,7 +1497,7 @@ Author: Mohammed Hisam
                 <!-- //2nd Prize -->
 
                 <!-- 3rd Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div disable class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center">
                         <div class="col-4">
                             <div class="features15-info">
