--- a/onStage.html
+++ b/onStage.html
@@ -1478,7 +1478,7 @@ Author: Mohammed Hisam
                 <!-- //2nd Prize -->
 
                 <!-- 2nd Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center ">
                         <div class="col-4">
                             <div class="features15-info">
@@ -1497,7 +1497,7 @@ Author: Mohammed Hisam
                 <!-- //2nd Prize -->
 
                 <!-- 3rd Prize -->
-                <div disable class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center">
                         <div class="col-4">
                             <div class="features15-info">
