--- a/onStage.html
+++ b/onStage.html
@@ -966,7 +966,7 @@ Author: Mohammed Hisam
         <h4 class="inner-text-title font-weight-bold mb-sm-3 mb-2 mt-5 text-center">DAY 1</h4>
 
         <!-- MonoAct -->
-        <div disable class="container" style="margin-top: 1rem;">
+        <div hidden class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">Monoact
             </button>
