--- a/onStage.html
+++ b/onStage.html
@@ -1587,7 +1587,7 @@ Author: Mohammed Hisam
         <!-- //Mappilapattu Individual Girls -->
 
         <!-- Classical Song Girls -->
-        <div  class="container" style="margin-top: 1rem;">
+        <div hidden class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">ക്ളാസ്സിക്കൽ സംഗീതം (പെൺ)
 
