--- a/onStage.html
+++ b/onStage.html
@@ -1519,7 +1519,7 @@ Author: Mohammed Hisam
         <!-- //Mappilapattu Individual Boys -->
 
         <!-- Mappilapattu Individual Girls -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div  class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">മാപ്പിളപ്പാട്ട് (വ്യക്തിഗതം)(പെൺ)
 
@@ -1536,9 +1536,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Julna</h4>
-                                <p>Multimedia 1st Year</p>
+                                <h6>Falcons</h6>
+                                <h4>Fidha v.v</h4>
+                                <p>BA.Eng 2nd Year</p>
                             </div>
                         </div>
                     </a>
@@ -1555,9 +1555,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Fathima Fida</h4>
-                                <p>BA English 1st Year</p>
+                                <h6>Phoenix</h6>
+                                <h4>Ayisha Julna</h4>
+                                <p>BA Multi 2nd Year</p>
                             </div>
                         </div>
                     </a>
@@ -1574,15 +1574,31 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Rimshana</h4>
-                                <p>BCA 3rd Year</p>
+                                <h6>Titans</h6>
+                                <h4>Risha</h4>
+                                <p>Bcom CA 1st Year</p>
                             </div>
                         </div>
                     </a>
                 </div>
                 <!-- //3rd Prize -->
             </div>
+                            <div class="col-lg-4 col-md-6 features15-col-text">
+                    <a href="#prize" class="d-flex feature-unit align-items-center">
+                        <div class="col-4">
+                            <div class="features15-info">
+                                <img class="img-fluid" src="assets/images/third.png" alt=" ">
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="features15-para">
+                                <h6>Warious</h6>
+                                <h4>Muhaina mr</h4>
+                                <p>Phy 3rd Year</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
         </div>
         <!-- //Mappilapattu Individual Girls -->
 
@@ -1696,7 +1712,7 @@ Author: Mohammed Hisam
                 <!-- //1st Prize -->
 
                 <!-- 1st Prize -->
-                <div disable class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center">
                         <div class="col-4">
                             <div class="features15-info">
