--- a/onStage.html
+++ b/onStage.html
@@ -1603,7 +1603,7 @@ Author: Mohammed Hisam
         <!-- //Mappilapattu Individual Girls -->
 
         <!-- Classical Song Girls -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">ക്ളാസ്സിക്കൽ സംഗീതം (പെൺ)
 
@@ -1621,9 +1621,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Falcons</h6>
-                                <h4>Fidha v.v</h4>
-                                <p>BA ENG 2nd Year</p>
+                                <h6>Phoenix</h6>
+                                <h4>Nithina MP</h4>
+                                <p>BCA 2nd Year</p>
                             </div>
                         </div>
                     </a>
@@ -1631,7 +1631,7 @@ Author: Mohammed Hisam
                 <!-- //1st Prize -->
 
                 <!-- 2nd Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center ">
                         <div class="col-4">
                             <div class="features15-info">
@@ -1650,7 +1650,7 @@ Author: Mohammed Hisam
                 <!-- //2nd Prize -->
 
                 <!-- 3rd Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center">
                         <div class="col-4">
                             <div class="features15-info">
@@ -1668,7 +1668,7 @@ Author: Mohammed Hisam
                 </div>
                 <!-- //3rd Prize -->
             </div>
-                                <a href="#prize" class="d-flex feature-unit align-items-center">
+                                <a hidden href="#prize" class="d-flex feature-unit align-items-center">
                         <div class="col-4">
                             <div class="features15-info">
                                 <img class="img-fluid" src="assets/images/third.png" alt=" ">
@@ -1772,7 +1772,7 @@ Author: Mohammed Hisam
         <!-- //Lalidha Song Girls -->
 
         <!-- Deshabakthi Song Group -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div  class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">ദേശഭക്തിഗാനം
             </button>
@@ -1788,8 +1788,8 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Emerald</h6>
-                                <h4>Fathima Jumna & Team</h4>
+                                <h6>Warriors</h6>
+                                <h4>Jareesha & Team</h4>
                                 <p></p>
                             </div>
                         </div>
@@ -1807,8 +1807,8 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Sapphire</h6>
-                                <h4>Niha & Team</h4>
+                                <h6>Pheonix</h6>
+                                <h4>Fathima Fiya & Team</h4>
                                 <p></p>
                             </div>
                         </div>
@@ -1826,8 +1826,8 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Arytha & Team</h4>
+                                <h6>Falcons</h6>
+                                <h4>Afiya VA & Team</h4>
                                 <p></p>
                             </div>
                         </div>
