--- a/onStage.html
+++ b/onStage.html
@@ -1668,21 +1668,7 @@ Author: Mohammed Hisam
                 </div>
                 <!-- //3rd Prize -->
             </div>
-                                <a hidden href="#prize" class="d-flex feature-unit align-items-center">
-                        <div class="col-4">
-                            <div class="features15-info">
-                                <img class="img-fluid" src="assets/images/third.png" alt=" ">
-                            </div>
-                        </div>
-                        <div class="col-8">
-                            <div class="features15-para">
-                                <h6>Warious</h6>
-                                <h4>Muhsina mr</h4>
-                                <p>Phy 3rd Year</p>
-                            </div>
-                        </div>
-                    </a>
-        </div>
+      </div
         <!-- //Classical Song Girls -->
 
         <!-- Lalidha Song Girls -->
