--- a/offStage.html
+++ b/offStage.html
@@ -203,8 +203,8 @@ Author: Mohammed Hisam
                     <div class="progress-outer">
                         <div class="progress">
                             <div class="progress-bar progress-bar-warning progress-bar-striped active"
-                                 style="width:50%; box-shadow:-1px 10px 10px rgba(240, 173, 78,0.7); background-color:#F0AD4E;">
-                                <div class="progress-value">Falcons:100</div>
+                                 style="width:55%; box-shadow:-1px 10px 10px rgba(240, 173, 78,0.7); background-color:#F0AD4E;">
+                                <div class="progress-value">Falcons:109</div>
                             </div>
 
                         </div>
@@ -576,7 +576,7 @@ Author: Mohammed Hisam
         <!-- //Dissertation Writing English -->
 
         <!-- Poetry Writing English -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">Poetry Writing English
             </button>
@@ -592,9 +592,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Jusna</h4>
-                                <p>BA English</p>
+                                <h6>Falcons</h6>
+                                <h4>Ahla muhammed yousuf</h4>
+                                <p>BA English 3rd year</p>
                             </div>
                         </div>
                     </a>
@@ -611,9 +611,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Muhammed Zinan K</h4>
-                                <p>BA English 2nd Year</p>
+                               <h6>Falcons</h6>
+                                <h4>Safna</h4>
+                                <p>BA English 3rd year</p>
                             </div>
                         </div>
                     </a>
@@ -630,9 +630,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Thalseer Muhammed Althaf VK</h4>
-                                <p>BA English 1st Year</p>
+                               <h6>Falcons</h6>
+                                <h4>Zinan</h4>
+                                <p>BA English 3rd year</p>
                             </div>
                         </div>
                     </a>
