--- a/onStage.html
+++ b/onStage.html
@@ -845,7 +845,7 @@ Author: Mohammed Hisam
         <!-- //Mappilappatu Group -->
 
         <!-- Western Music -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div  class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">പാശ്ചാത്യസംഗീതം (വ്യക്തിഗതം)
             </button>
@@ -861,9 +861,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Ahla Mohammed Yoosuf</h4>
-                                <p>BA English 2nd Year</p>
+                                <h6>Phoenix</h6>
+                                <h4>Aysha Julna</h4>
+                                <p>Multi 2nd Year</p>
                             </div>
                         </div>
                     </a>
@@ -880,8 +880,8 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Julna</h4>
+                                <h6>Phoenix</h6>
+                                <h4>Nada Karadan</h4>
                                 <p>Multimedia 1st Year</p>
                             </div>
                         </div>
@@ -899,9 +899,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Topaz</h6>
-                                <h4>Safna M</h4>
-                                <p>BA English</p>
+                                <h6>Titans</h6>
+                                <h4>Sona M</h4>
+                                <p>Bcom CA 1st Year</p>
                             </div>
                         </div>
                     </a>
@@ -966,7 +966,7 @@ Author: Mohammed Hisam
         <h4 class="inner-text-title font-weight-bold mb-sm-3 mb-2 mt-5 text-center">DAY 1</h4>
 
         <!-- MonoAct -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div  class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">Monoact
             </button>
@@ -982,9 +982,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Malavika</h4>
-                                <p>Multimedia 3rd Year</p>
+                                <h6>Phoenix</h6>
+                                <h4>Saja PT</h4>
+                                <p>BCA 2ndYear</p>
                             </div>
                         </div>
                     </a>
@@ -1001,9 +1001,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Aneena Nasrin</h4>
-                                <p>Multimedia 3rd Year</p>
+                                <h6>Phoenix</h6>
+                                <h4>Vishnu Laju</h4>
+                                <p>Multimedia 1st Year</p>
                             </div>
                         </div>
                     </a>
@@ -1011,7 +1011,7 @@ Author: Mohammed Hisam
                 <!-- //2nd Prize -->
 
                 <!-- 3rd Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center">
                         <div class="col-4">
                             <div class="features15-info">
@@ -1083,7 +1083,7 @@ Author: Mohammed Hisam
         <!-- //Mime -->
 
         <!-- Kadhaprasangam -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div  class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">കഥാപ്രസംഗം
             </button>
@@ -1099,9 +1099,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Aneena Nasrin</h4>
-                                <p>Multimedia 3rd Year</p>
+                                <h6>Phoenix</h6>
+                                <h4>Fathima Fiya</h4>
+                                <p> BCA 2nd Year</p>
                             </div>
                         </div>
                     </a>
@@ -1109,7 +1109,7 @@ Author: Mohammed Hisam
                 <!-- //1st Prize -->
 
                 <!-- 2nd Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center ">
                         <div class="col-4">
                             <div class="features15-info">
@@ -1128,7 +1128,7 @@ Author: Mohammed Hisam
                 <!-- //2nd Prize -->
 
                 <!-- 3rd Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center">
                         <div class="col-4">
                             <div class="features15-info">
@@ -1219,7 +1219,7 @@ Author: Mohammed Hisam
         <!-- //Thiruvadhirakali -->
 
         <!-- Sanga Ganam Indian -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div  class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">സംഘഗാനം ( ഇന്ത്യൻ)
             </button>
@@ -1235,8 +1235,8 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Citrine</h6>
-                                <h4>Sriya & Team</h4>
+                                <h6>Phoenix</h6>
+                                <h4>Safeedha & Team</h4>
                                 <p></p>
                             </div>
                         </div>
@@ -1245,7 +1245,7 @@ Author: Mohammed Hisam
                 <!-- //1st Prize -->
 
                 <!-- 2nd Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center ">
                         <div class="col-4">
                             <div class="features15-info">
@@ -1268,7 +1268,7 @@ Author: Mohammed Hisam
         <!-- //Sanga Ganam Indian -->
 
         <!-- Nadodi Nirtham -->
-        <div hidden class="container" style="margin-top: 1rem;">
+        <div  class="container" style="margin-top: 1rem;">
             <!-- Item Title -->
             <button class="collapsible inner-text-title font-weight-bold text-center">നാടോടി നൃത്തം (പെൺ) - വ്യക്തിഗതം
             </button>
@@ -1284,9 +1284,9 @@ Author: Mohammed Hisam
                         </div>
                         <div class="col-8">
                             <div class="features15-para">
-                                <h6>Emerald</h6>
-                                <h4>Anamika</h4>
-                                <p>Electronics 3rd Year</p>
+                                <h6>Warriors</h6>
+                                <h4>Sanpra</h4>
+                                <p>BSC Psyco 1st Year</p>
                             </div>
                         </div>
                     </a>
@@ -1294,7 +1294,7 @@ Author: Mohammed Hisam
                 <!-- //1st Prize -->
 
                 <!-- 2nd Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center ">
                         <div class="col-4">
                             <div class="features15-info">
@@ -1313,7 +1313,7 @@ Author: Mohammed Hisam
                 <!-- //2nd Prize -->
 
                 <!-- 3rd Prize -->
-                <div class="col-lg-4 col-md-6 features15-col-text">
+                <div hidden class="col-lg-4 col-md-6 features15-col-text">
                     <a href="#prize" class="d-flex feature-unit align-items-center">
                         <div class="col-4">
                             <div class="features15-info">
