--- a/onStage.html
+++ b/onStage.html
@@ -187,8 +187,8 @@ Author: Mohammed Hisam
                     <div class="progress-outer">
                         <div class="progress">
                             <div class="progress-bar progress-bar-success progress-bar-striped active"
-                                 style="width:14.5%; box-shadow:-1px 10px 10px rgba(116, 195, 116,0.7); background-color:#74C374;">
-                                <div class="progress-value">Phoenix:29</div>
+                                 style="width:30%; box-shadow:-1px 10px 10px rgba(116, 195, 116,0.7); background-color:#74C374;">
+                                <div class="progress-value">Phoenix:60</div>
                             </div>
                         </div>
                     </div>
@@ -211,8 +211,8 @@ Author: Mohammed Hisam
                     <div class="progress-outer">
                         <div class="progress">
                             <div class="progress-bar progress-bar-warning progress-bar-striped active"
-                                 style="width:5.5%; box-shadow:-1px 10px 10px rgba(240,51,50,0.7); background-color:#F03332;">
-                                <div class="progress-value">Warriors:11</div>
+                                 style="width:8%; box-shadow:-1px 10px 10px rgba(240,51,50,0.7); background-color:#F03332;">
+                                <div class="progress-value">Warriors:16</div>
                             </div>
 
                         </div>
@@ -224,7 +224,7 @@ Author: Mohammed Hisam
                         <div class="progress">
                             <div class="progress-bar progress-bar-info progress-bar-striped active"
                                  style="width:1%; box-shadow:-1px 10px 10px rgba(91, 192, 222, 0.7); background-color:#5BC0DE;  ">
-                                <div class="progress-value">Titans:1</div>
+                                <div class="progress-value">Titans:2</div>
                             </div>
 
                         </div>
@@ -963,7 +963,7 @@ Author: Mohammed Hisam
 
 
 
-        <h4 class="inner-text-title font-weight-bold mb-sm-3 mb-2 mt-5 text-center">DAY 1</h4>
+        <h4 hidden class="inner-text-title font-weight-bold mb-sm-3 mb-2 mt-5 text-center">DAY 1</h4>
 
         <!-- MonoAct -->
         <div  class="container" style="margin-top: 1rem;">
